--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,10 +1,22 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.applover.markiz">
+          xmlns:tools="http://schemas.android.com/tools" package="com.applover.markiz">
 
-    <application android:allowBackup="true"
-                 android:label="@string/app_name"
-                 android:icon="@mipmap/ic_launcher"
-                 android:roundIcon="@mipmap/ic_launcher_round"
-                 android:supportsRtl="true"
-                 android:theme="@style/AppTheme"/>
+	<application android:allowBackup="true"
+	             android:label="@string/app_name"
+	             android:icon="@mipmap/ic_launcher"
+	             android:roundIcon="@mipmap/ic_launcher_round"
+	             android:supportsRtl="true"
+	             android:theme="@style/Base.Applover"
+	             tools:ignore="GoogleAppIndexingWarning">
+
+		<activity
+				android:name=".ui.login.LoginActivity">
+			<intent-filter>
+				<action android:name="android.intent.action.MAIN"/>
+
+				<category android:name="android.intent.category.LAUNCHER"/>
+			</intent-filter>
+		</activity>
+
+	</application>
 </manifest>
