--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,13 +1,17 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           xmlns:tools="http://schemas.android.com/tools" package="com.applover.markiz">
 
-	<application android:allowBackup="true"
-	             android:label="@string/app_name"
-	             android:icon="@mipmap/ic_launcher"
-	             android:roundIcon="@mipmap/ic_launcher_round"
-	             android:supportsRtl="true"
-	             android:theme="@style/Base.Applover"
-	             tools:ignore="GoogleAppIndexingWarning">
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+
+	<application
+			android:name=".base.ApploverApplication"
+			android:allowBackup="true"
+			android:label="@string/app_name"
+			android:icon="@mipmap/ic_launcher"
+			android:roundIcon="@mipmap/ic_launcher_round"
+			android:supportsRtl="true"
+			android:theme="@style/Base.Applover"
+			tools:ignore="AllowBackup,GoogleAppIndexingWarning">
 
 		<activity
 				android:name=".ui.login.LoginActivity">
