--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,20 +1,22 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          xmlns:tools="http://schemas.android.com/tools" package="com.applover.markiz">
+          xmlns:tools="http://schemas.android.com/tools"
+          package="com.applover.markiz">
 
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+	<uses-permission android:name="android.permission.INTERNET"/>
 
 	<application
 			android:name=".base.ApploverApplication"
 			android:allowBackup="true"
 			android:label="@string/app_name"
-			android:icon="@mipmap/ic_launcher"
-			android:roundIcon="@mipmap/ic_launcher_round"
+			android:icon="@drawable/all_logo_24dp"
 			android:supportsRtl="true"
 			android:theme="@style/Base.Applover"
 			tools:ignore="AllowBackup,GoogleAppIndexingWarning">
 
 		<activity
-				android:name=".ui.login.LoginActivity">
+				android:name=".ui.login.LoginActivity"
+				android:windowSoftInputMode="adjustPan">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN"/>
 
